// Package flows æä¾›å¯å¤ç”¨çš„äº¤äº’æµç¨‹
package flows

import (
	"context"
	"encoding/hex"
	"encoding/json"
	"fmt"
	"os"
	"path/filepath"
	"strconv"
	"strings"

	"github.com/weisyn/v1/client/pkg/ux/ui"
	"github.com/weisyn/v1/pkg/utils"
	"github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
)

// ============================================================================
// ContractFlow - åˆçº¦ç®¡ç†äº¤äº’å¼æµç¨‹
//
// å‚è€ƒæ—§CLI: _archived/old-internal-cli/internal/cli/presentation/screens/contract_deploy_screen.go
// æä¾›å®Œæ•´çš„åˆ†æ­¥å¼•å¯¼å¼äº¤äº’ä½“éªŒ
// ============================================================================

// ContractFlow åˆçº¦ç®¡ç†æµç¨‹
type ContractFlow struct {
	ui              ui.Components
	contractService ContractService
	walletService   WalletService
}

// NewContractFlow åˆ›å»ºåˆçº¦ç®¡ç†æµç¨‹
func NewContractFlow(
	uiComponents ui.Components,
	contractService ContractService,
	walletService WalletService,
) *ContractFlow {
	return &ContractFlow{
		ui:              uiComponents,
		contractService: contractService,
		walletService:   walletService,
	}
}

// ============================================================================
// åˆçº¦éƒ¨ç½²æµç¨‹ï¼ˆå¯¹é½æ—§CLIçš„6æ­¥æµç¨‹ï¼‰
// ============================================================================

// ShowDeployContract å±•ç¤ºåˆçº¦éƒ¨ç½²æµç¨‹ï¼ˆäº¤äº’å¼ï¼‰
//
// å®Œæ•´æµç¨‹ï¼ˆå¯¹é½æ—§CLIï¼‰ï¼š
//   æ­¥éª¤1: é€‰æ‹©é’±åŒ…
//   æ­¥éª¤2: éªŒè¯èº«ä»½ï¼ˆè¾“å…¥å¹¶éªŒè¯å¯†ç ï¼‰
//   æ­¥éª¤3: é€‰æ‹©WASMæ–‡ä»¶
//   æ­¥éª¤4: é…ç½®åˆçº¦æ‰§è¡Œå‚æ•°ï¼ˆABIç‰ˆæœ¬ï¼‰
//   æ­¥éª¤5: è¾“å…¥åˆçº¦å…ƒæ•°æ®ï¼ˆåç§°ã€æè¿°ï¼‰
//   æ­¥éª¤6: ç¡®è®¤å¹¶éƒ¨ç½²
func (f *ContractFlow) ShowDeployContract(ctx context.Context) error {
	f.ui.ShowHeader("ğŸ“¤ éƒ¨ç½²æ™ºèƒ½åˆçº¦")

	// ====== æ­¥éª¤1: é€‰æ‹©é’±åŒ… ======
	f.ui.ShowInfo("ğŸ’¼ æ­¥éª¤ 1/6ï¼šé€‰æ‹©é’±åŒ…")
	fmt.Println()

	wallets, err := f.walletService.ListWallets(ctx)
	if err != nil {
		f.ui.ShowError("è·å–é’±åŒ…åˆ—è¡¨å¤±è´¥: " + err.Error())
		return fmt.Errorf("è·å–é’±åŒ…åˆ—è¡¨å¤±è´¥: %w", err)
	}

	if len(wallets) == 0 {
		f.ui.ShowWarning("æš‚æ— é’±åŒ…ï¼Œè¯·å…ˆåˆ›å»ºé’±åŒ…")
		fmt.Println()
		f.ui.ShowInfo("ğŸ’¡ æç¤ºï¼šè¿”å›ä¸»èœå• â†’ è´¦æˆ·ç®¡ç† â†’ åˆ›å»ºè´¦æˆ·")
		return fmt.Errorf("æš‚æ— é’±åŒ…")
	}

	// æ„å»ºé’±åŒ…é€‰é¡¹
	walletNames := make([]string, len(wallets))
	for i, w := range wallets {
		defaultTag := ""
		if w.IsDefault {
			defaultTag = " [é»˜è®¤]"
		}
		walletNames[i] = fmt.Sprintf("%s - %s%s", w.Name, w.Address, defaultTag)
	}

	selectedIdx, err := f.ui.ShowMenu("é€‰æ‹©é’±åŒ…", walletNames)
	if err != nil {
		f.ui.ShowError("é€‰æ‹©å¤±è´¥: " + err.Error())
		return fmt.Errorf("é€‰æ‹©é’±åŒ…å¤±è´¥: %w", err)
	}

	selectedWallet := wallets[selectedIdx]
	f.ui.ShowSuccess(fmt.Sprintf("âœ… å·²é€‰æ‹©é’±åŒ…: %s", selectedWallet.Name))
	fmt.Println()

	// ====== æ­¥éª¤2: éªŒè¯èº«ä»½ ======
	f.ui.ShowInfo("ğŸ” æ­¥éª¤ 2/6ï¼šéªŒè¯èº«ä»½")
	fmt.Println()

	password, err := f.ui.ShowInputDialog("é’±åŒ…å¯†ç ", "è¯·è¾“å…¥é’±åŒ…å¯†ç ä»¥è§£é”ç§é’¥", true)
	if err != nil {
		return fmt.Errorf("è¾“å…¥å¯†ç å¤±è´¥: %w", err)
	}

	// ğŸ”’ ç«‹å³éªŒè¯å¯†ç ï¼ˆé¿å…ç”¨æˆ·å¡«å†™å®Œæ‰€æœ‰ä¿¡æ¯åæ‰å‘ç°å¯†ç é”™è¯¯ï¼‰
	_, err = f.walletService.ExportPrivateKey(ctx, selectedWallet.Name, password)
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ å¯†ç éªŒè¯å¤±è´¥: %v", err))
		fmt.Println()
		f.ui.ShowWarning("ğŸ’¡ è¯·æ£€æŸ¥å¯†ç æ˜¯å¦æ­£ç¡®")
		return fmt.Errorf("å¯†ç éªŒè¯å¤±è´¥: %w", err)
	}

	f.ui.ShowSuccess("âœ… å¯†ç éªŒè¯æˆåŠŸ")
	fmt.Println()

	// ====== æ­¥éª¤3: é€‰æ‹©WASMæ–‡ä»¶ ======
	f.ui.ShowInfo("ğŸ“ æ­¥éª¤ 3/6ï¼šé€‰æ‹©WASMæ–‡ä»¶")
	fmt.Println()

	filePath, err := f.ui.ShowInputDialog("WASMæ–‡ä»¶è·¯å¾„", "è¯·è¾“å…¥WASMåˆçº¦æ–‡ä»¶çš„å®Œæ•´è·¯å¾„", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥æ–‡ä»¶è·¯å¾„å¤±è´¥: %w", err)
	}

	// éªŒè¯æ–‡ä»¶å­˜åœ¨æ€§
	fileInfo, err := os.Stat(filePath)
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ æ–‡ä»¶ä¸å­˜åœ¨æˆ–æ— æ³•è®¿é—®: %v", err))
		return fmt.Errorf("æ–‡ä»¶è®¿é—®å¤±è´¥: %w", err)
	}

	if fileInfo.IsDir() {
		f.ui.ShowError("âŒ æŒ‡å®šçš„è·¯å¾„æ˜¯ç›®å½•ï¼Œè¯·æŒ‡å®šWASMæ–‡ä»¶")
		return fmt.Errorf("è·¯å¾„æ˜¯ç›®å½•è€Œéæ–‡ä»¶")
	}

	// éªŒè¯WASMæ–‡ä»¶æ ¼å¼
	wasmBytes, err := os.ReadFile(filePath)
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ è¯»å–æ–‡ä»¶å¤±è´¥: %v", err))
		return fmt.Errorf("è¯»å–æ–‡ä»¶å¤±è´¥: %w", err)
	}

	// éªŒè¯WASMé­”æ•°ï¼ˆ0x00 0x61 0x73 0x6Dï¼‰
	if len(wasmBytes) < 4 || wasmBytes[0] != 0x00 || wasmBytes[1] != 0x61 || wasmBytes[2] != 0x73 || wasmBytes[3] != 0x6D {
		f.ui.ShowError("âŒ æ— æ•ˆçš„WASMæ–‡ä»¶ï¼šé­”æ•°ä¸åŒ¹é…")
		return fmt.Errorf("æ— æ•ˆçš„WASMæ–‡ä»¶")
	}

	f.ui.ShowSuccess(fmt.Sprintf("âœ… æ–‡ä»¶æ‰¾åˆ°: %s", filePath))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ æ–‡ä»¶å¤§å°: %s", formatFileSize(fileInfo.Size())))
	fmt.Println()

	// ====== æ­¥éª¤4: é…ç½®åˆçº¦æ‰§è¡Œå‚æ•° ======
	f.ui.ShowInfo("âš™ï¸  æ­¥éª¤ 4/6ï¼šé…ç½®åˆçº¦æ‰§è¡Œå‚æ•°")
	fmt.Println()

	abiVersion, err := f.ui.ShowInputDialog("ABIç‰ˆæœ¬", "è¯·è¾“å…¥ABIç‰ˆæœ¬ï¼ˆç•™ç©ºé»˜è®¤: v1ï¼‰", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥ABIç‰ˆæœ¬å¤±è´¥: %w", err)
	}
	if abiVersion == "" {
		abiVersion = "v1"
	}

	f.ui.ShowInfo("")
	f.ui.ShowInfo("ğŸ’¡ æç¤ºï¼šå¯¼å‡ºå‡½æ•°å°†ç”±æœåŠ¡ç«¯è‡ªåŠ¨è§£æï¼Œç¡®ä¿å‡†ç¡®æ€§ä¸å®‰å…¨æ€§")
	fmt.Println()

	config := &resource.ContractExecutionConfig{
		AbiVersion: abiVersion,
		// ExportedFunctions: ç•™ç©ºï¼Œç”±æœåŠ¡ç«¯è‡ªåŠ¨è§£æWASMå¹¶å¡«å……
	}

	// ====== æ­¥éª¤5: è¾“å…¥åˆçº¦å…ƒæ•°æ® ======
	f.ui.ShowInfo("ğŸ“ æ­¥éª¤ 5/6ï¼šåˆçº¦å…ƒæ•°æ®")
	fmt.Println()

	// ä»æ–‡ä»¶è·¯å¾„æå–æ–‡ä»¶åï¼ˆä¸å«æ‰©å±•åï¼‰ä½œä¸ºé»˜è®¤åˆçº¦åç§°
	defaultName := extractContractNameFromPath(filePath)

	var name string
	for {
		prompt := fmt.Sprintf("è¯·è¾“å…¥åˆçº¦åç§°ï¼ˆç•™ç©ºä½¿ç”¨é»˜è®¤: %sï¼‰", defaultName)
		name, err = f.ui.ShowInputDialog("åˆçº¦åç§°", prompt, false)
		if err != nil {
			return fmt.Errorf("è¾“å…¥åˆçº¦åç§°å¤±è´¥: %w", err)
		}
		name = strings.TrimSpace(name)

		// å¦‚æœç”¨æˆ·ç•™ç©ºï¼Œä½¿ç”¨é»˜è®¤æ–‡ä»¶å
		if name == "" {
			name = defaultName
			f.ui.ShowInfo(fmt.Sprintf("ğŸ’¡ ä½¿ç”¨é»˜è®¤åˆçº¦åç§°: %s", name))
			fmt.Println()
		}

		// éªŒè¯åç§°åˆæ³•æ€§
		if name == "" {
			f.ui.ShowError("âŒ åˆçº¦åç§°ä¸èƒ½ä¸ºç©ºï¼Œè¯·é‡æ–°è¾“å…¥")
			fmt.Println()
			continue
		}

		break
	}

	description, err := f.ui.ShowInputDialog("åˆçº¦æè¿°", "è¯·è¾“å…¥åˆçº¦æè¿°ï¼ˆå¯é€‰ï¼Œç›´æ¥å›è½¦è·³è¿‡ï¼‰", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥åˆçº¦æè¿°å¤±è´¥: %w", err)
	}

	// ====== æ­¥éª¤6: æ˜¾ç¤ºéƒ¨ç½²æ‘˜è¦å¹¶ç¡®è®¤ ======
	fmt.Println()
	f.ui.ShowInfo("ğŸ“‹ æ­¥éª¤ 6/6ï¼šç¡®è®¤éƒ¨ç½²")
	fmt.Println()
	f.ui.ShowInfo("éƒ¨ç½²æ‘˜è¦ï¼š")
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ é’±åŒ…: %s", selectedWallet.Name))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ åœ°å€: %s", selectedWallet.Address))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ æ–‡ä»¶: %s", filePath))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ å¤§å°: %s", formatFileSize(fileInfo.Size())))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ åç§°: %s", name))
	if description != "" {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ æè¿°: %s", description))
	}
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ ABIç‰ˆæœ¬: %s", config.AbiVersion))
	f.ui.ShowInfo("  â€¢ å¯¼å‡ºå‡½æ•°: ç”±æœåŠ¡ç«¯è‡ªåŠ¨è§£æ")
	fmt.Println()

	confirmed, err := f.ui.ShowConfirmDialog("ç¡®è®¤éƒ¨ç½²", "ç¡®è®¤éƒ¨ç½²æ­¤åˆçº¦å—ï¼Ÿ")
	if err != nil || !confirmed {
		f.ui.ShowWarning("âŒ éƒ¨ç½²å·²å–æ¶ˆ")
		return nil
	}

	// ====== æ‰§è¡Œéƒ¨ç½² ======
	fmt.Println()
	f.ui.ShowInfo("ğŸ“Š æ­£åœ¨éƒ¨ç½²åˆçº¦...")
	f.ui.ShowInfo("  â€¢ å¤„ç†ä¸­ï¼šWASMå…¥åº“ â†’ æ„å»ºäº¤æ˜“ â†’ ç­¾å â†’ æäº¤ç½‘ç»œ...")
	fmt.Println()

	spinner := f.ui.ShowSpinner("éƒ¨ç½²ä¸­ï¼Œè¯·ç¨å€™...")
	spinner.Start()

	result, err := f.contractService.DeployContract(ctx, &ContractDeployRequest{
		WalletName:  selectedWallet.Name,
		Password:    password,
		FilePath:    filePath,
		Config:      config,
		Name:        name,
		Description: description,
	})

	spinner.Stop()

	// ====== æ˜¾ç¤ºç»“æœ ======
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ éƒ¨ç½²å¤±è´¥: %v", err))
		return fmt.Errorf("éƒ¨ç½²å¤±è´¥: %w", err)
	}

	f.ui.ShowSuccess("âœ… éƒ¨ç½²æˆåŠŸï¼åˆçº¦å·²æäº¤åˆ°åŒºå—é“¾ç½‘ç»œ")
	fmt.Println()
	f.ui.ShowInfo("ğŸ“‹ åˆçº¦ä¿¡æ¯ï¼š")
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ åˆçº¦IDï¼ˆå†…å®¹å“ˆå¸Œï¼‰: %s", result.ContentHash))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ äº¤æ˜“å“ˆå¸Œ: %s", result.TxHash))
	fmt.Println()
	f.ui.ShowWarning("ğŸ’¡ é‡è¦æç¤ºï¼š")
	f.ui.ShowInfo("  â€¢ è¯·ä¿å­˜ã€åˆçº¦IDã€‘ï¼Œç”¨äºåç»­è°ƒç”¨åˆçº¦æ–¹æ³•")
	f.ui.ShowInfo("  â€¢ åˆçº¦IDæ˜¯32å­—èŠ‚çš„å†…å®¹å¯»å€å“ˆå¸Œ(ContentHash)")
	f.ui.ShowInfo("  â€¢ åˆçº¦ä»£ç æ°¸ä¹…å­˜å‚¨åœ¨åŒºå—é“¾ä¸Šï¼Œä¸å¯ç¯¡æ”¹")
	fmt.Println()

	return nil
}

// ============================================================================
// åˆçº¦è°ƒç”¨æµç¨‹
// ============================================================================

// ShowCallContract å±•ç¤ºåˆçº¦è°ƒç”¨æµç¨‹ï¼ˆäº¤äº’å¼ï¼‰
//
// å®Œæ•´æµç¨‹ï¼š
//   æ­¥éª¤1: é€‰æ‹©é’±åŒ…
//   æ­¥éª¤2: éªŒè¯èº«ä»½ï¼ˆè¾“å…¥å¹¶éªŒè¯å¯†ç ï¼‰
//   æ­¥éª¤3: è¾“å…¥åˆçº¦IDï¼ˆContentHashï¼‰
//   æ­¥éª¤4: è¾“å…¥è°ƒç”¨æ–¹æ³•å
//   æ­¥éª¤5: è¾“å…¥æ–¹æ³•å‚æ•°
//   æ­¥éª¤6: ç¡®è®¤å¹¶è°ƒç”¨
func (f *ContractFlow) ShowCallContract(ctx context.Context) error {
	f.ui.ShowHeader("ğŸ“ è°ƒç”¨æ™ºèƒ½åˆçº¦")

	// ====== æ­¥éª¤1: é€‰æ‹©é’±åŒ… ======
	f.ui.ShowInfo("ğŸ’¼ æ­¥éª¤ 1/6ï¼šé€‰æ‹©é’±åŒ…")
	fmt.Println()

	wallets, err := f.walletService.ListWallets(ctx)
	if err != nil {
		f.ui.ShowError("è·å–é’±åŒ…åˆ—è¡¨å¤±è´¥: " + err.Error())
		return fmt.Errorf("è·å–é’±åŒ…åˆ—è¡¨å¤±è´¥: %w", err)
	}

	if len(wallets) == 0 {
		f.ui.ShowWarning("æš‚æ— é’±åŒ…ï¼Œè¯·å…ˆåˆ›å»ºé’±åŒ…")
		fmt.Println()
		f.ui.ShowInfo("ğŸ’¡ æç¤ºï¼šè¿”å›ä¸»èœå• â†’ è´¦æˆ·ç®¡ç† â†’ åˆ›å»ºè´¦æˆ·")
		return fmt.Errorf("æš‚æ— é’±åŒ…")
	}

	// æ„å»ºé’±åŒ…é€‰é¡¹
	walletNames := make([]string, len(wallets))
	for i, w := range wallets {
		defaultTag := ""
		if w.IsDefault {
			defaultTag = " [é»˜è®¤]"
		}
		walletNames[i] = fmt.Sprintf("%s - %s%s", w.Name, w.Address, defaultTag)
	}

	selectedIdx, err := f.ui.ShowMenu("é€‰æ‹©é’±åŒ…", walletNames)
	if err != nil {
		f.ui.ShowError("é€‰æ‹©å¤±è´¥: " + err.Error())
		return fmt.Errorf("é€‰æ‹©é’±åŒ…å¤±è´¥: %w", err)
	}

	selectedWallet := wallets[selectedIdx]
	f.ui.ShowSuccess(fmt.Sprintf("âœ… å·²é€‰æ‹©é’±åŒ…: %s", selectedWallet.Name))
	fmt.Println()

	// ====== æ­¥éª¤2: éªŒè¯èº«ä»½ ======
	f.ui.ShowInfo("ğŸ” æ­¥éª¤ 2/6ï¼šéªŒè¯èº«ä»½")
	fmt.Println()

	password, err := f.ui.ShowInputDialog("é’±åŒ…å¯†ç ", "è¯·è¾“å…¥é’±åŒ…å¯†ç ä»¥è§£é”ç§é’¥", true)
	if err != nil {
		return fmt.Errorf("è¾“å…¥å¯†ç å¤±è´¥: %w", err)
	}

	// ğŸ”’ ç«‹å³éªŒè¯å¯†ç 
	_, err = f.walletService.ExportPrivateKey(ctx, selectedWallet.Name, password)
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ å¯†ç éªŒè¯å¤±è´¥: %v", err))
		fmt.Println()
		f.ui.ShowWarning("ğŸ’¡ è¯·æ£€æŸ¥å¯†ç æ˜¯å¦æ­£ç¡®")
		return fmt.Errorf("å¯†ç éªŒè¯å¤±è´¥: %w", err)
	}

	f.ui.ShowSuccess("âœ… å¯†ç éªŒè¯æˆåŠŸ")
	fmt.Println()

	// ====== æ­¥éª¤3: è¾“å…¥åˆçº¦ID ======
	f.ui.ShowInfo("ğŸ”— æ­¥éª¤ 3/6ï¼šè¾“å…¥åˆçº¦ID")
	fmt.Println()

	contractIDStr, err := f.ui.ShowInputDialog("åˆçº¦ID", "è¯·è¾“å…¥åˆçº¦IDï¼ˆ64ä½åå…­è¿›åˆ¶çš„ContentHashï¼‰", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥åˆçº¦IDå¤±è´¥: %w", err)
	}

	// éªŒè¯åˆçº¦IDæ ¼å¼
	contractIDStr = strings.TrimSpace(contractIDStr)
	contractIDStr = strings.TrimPrefix(contractIDStr, "0x") // å…¼å®¹ 0x å‰ç¼€
	
	contractIDBytes, err := hex.DecodeString(contractIDStr)
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ åˆçº¦IDæ ¼å¼é”™è¯¯ï¼ˆåº”ä¸º64ä½åå…­è¿›åˆ¶ï¼‰: %v", err))
		return fmt.Errorf("åˆçº¦IDæ ¼å¼é”™è¯¯: %w", err)
	}

	if len(contractIDBytes) != 32 {
		f.ui.ShowError(fmt.Sprintf("âŒ åˆçº¦IDé•¿åº¦é”™è¯¯ï¼ˆåº”ä¸º32å­—èŠ‚ï¼Œå½“å‰: %då­—èŠ‚ï¼‰", len(contractIDBytes)))
		return fmt.Errorf("åˆçº¦IDé•¿åº¦é”™è¯¯")
	}

	f.ui.ShowSuccess(fmt.Sprintf("âœ… åˆçº¦ID: %s", contractIDStr))
	fmt.Println()

	// ====== æ­¥éª¤4: è¾“å…¥è°ƒç”¨æ–¹æ³•å ======
	f.ui.ShowInfo("ğŸ¯ æ­¥éª¤ 4/6ï¼šè¾“å…¥è°ƒç”¨æ–¹æ³•")
	fmt.Println()

	method, err := f.ui.ShowInputDialog("æ–¹æ³•å", "è¯·è¾“å…¥è¦è°ƒç”¨çš„æ–¹æ³•åï¼ˆå¦‚: add, get_balanceï¼‰", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥æ–¹æ³•åå¤±è´¥: %w", err)
	}

	method = strings.TrimSpace(method)
	if method == "" {
		f.ui.ShowError("âŒ æ–¹æ³•åä¸èƒ½ä¸ºç©º")
		return fmt.Errorf("æ–¹æ³•åä¸ºç©º")
	}

	f.ui.ShowSuccess(fmt.Sprintf("âœ… è°ƒç”¨æ–¹æ³•: %s", method))
	fmt.Println()

	// ====== æ­¥éª¤5: é€‰æ‹©å‚æ•°ç±»å‹å¹¶è¾“å…¥ ======
	f.ui.ShowInfo("ğŸ“ æ­¥éª¤ 5/6ï¼šè¾“å…¥æ–¹æ³•å‚æ•°")
	fmt.Println()
	f.ui.ShowInfo("è¯·é€‰æ‹©å‚æ•°ç±»å‹ï¼š")
	f.ui.ShowInfo("  1. æ— å‚æ•°")
	f.ui.ShowInfo("  2. u64æ•°ç»„ï¼ˆå¦‚: 100,200,300ï¼‰")
	f.ui.ShowInfo("  3. JSON payloadï¼ˆå¦‚: {\"action\":\"balance\"}ï¼‰")
	fmt.Println()

	paramTypeStr, err := f.ui.ShowInputDialog("å‚æ•°ç±»å‹", "è¯·è¾“å…¥é€‰é¡¹ (1/2/3)", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥å‚æ•°ç±»å‹å¤±è´¥: %w", err)
	}

	var params []uint64
	var payload []byte
	paramType := strings.TrimSpace(paramTypeStr)

	switch paramType {
	case "1", "":
		// æ— å‚æ•°
		f.ui.ShowInfo("  â€¢ æ— å‚æ•°")

	case "2":
		// u64æ•°ç»„å‚æ•°
		fmt.Println()
		paramsStr, err := f.ui.ShowInputDialog("u64å‚æ•°", "è¯·è¾“å…¥å‚æ•°ï¼ˆé€—å·åˆ†éš”ï¼Œå¦‚: 100,200ï¼‰", false)
		if err != nil {
			return fmt.Errorf("è¾“å…¥å‚æ•°å¤±è´¥: %w", err)
		}

		paramsStr = strings.TrimSpace(paramsStr)
		if paramsStr != "" {
			paramParts := strings.Split(paramsStr, ",")
			params = make([]uint64, 0, len(paramParts))
			for _, part := range paramParts {
				part = strings.TrimSpace(part)
				if part == "" {
					continue
				}
				var val uint64
				_, err := fmt.Sscanf(part, "%d", &val)
				if err != nil {
					f.ui.ShowError(fmt.Sprintf("âŒ å‚æ•°è§£æå¤±è´¥: %v", err))
					return fmt.Errorf("å‚æ•°è§£æå¤±è´¥: %w", err)
				}
				params = append(params, val)
			}
			f.ui.ShowSuccess(fmt.Sprintf("âœ… u64å‚æ•°: %v", params))
		}

	case "3":
		// JSON payload
		fmt.Println()
		f.ui.ShowInfo("ğŸ’¡ JSONç¤ºä¾‹:")
		f.ui.ShowInfo("  â€¢ æŸ¥è¯¢åŒºå—é«˜åº¦: {\"action\":\"block_height\"}")
		f.ui.ShowInfo("  â€¢ æŸ¥è¯¢ä½™é¢: {\"action\":\"balance\"}")
		fmt.Println()

		payloadStr, err := f.ui.ShowInputDialog("JSON Payload", "è¯·è¾“å…¥JSONæ ¼å¼å‚æ•°", false)
		if err != nil {
			return fmt.Errorf("è¾“å…¥payloadå¤±è´¥: %w", err)
		}

		payloadStr = strings.TrimSpace(payloadStr)
		if payloadStr != "" {
			payload = []byte(payloadStr)
			f.ui.ShowSuccess(fmt.Sprintf("âœ… JSON Payload: %s", payloadStr))
		}

	default:
		f.ui.ShowError("âŒ æ— æ•ˆçš„å‚æ•°ç±»å‹")
		return fmt.Errorf("æ— æ•ˆçš„å‚æ•°ç±»å‹: %s", paramType)
	}

	fmt.Println()

	// ====== æ­¥éª¤6: ç¡®è®¤å¹¶è°ƒç”¨ ======
	f.ui.ShowInfo("ğŸ“‹ æ­¥éª¤ 6/6ï¼šç¡®è®¤è°ƒç”¨")
	fmt.Println()
	f.ui.ShowInfo("è°ƒç”¨æ‘˜è¦ï¼š")
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ é’±åŒ…: %s", selectedWallet.Name))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ åˆçº¦ID: %s", contractIDStr))
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ æ–¹æ³•: %s", method))
	if len(payload) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ Payload: %s", string(payload)))
	} else if len(params) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ å‚æ•°: %v", params))
	} else {
		f.ui.ShowInfo("  â€¢ å‚æ•°: æ— ")
	}
	fmt.Println()

	confirmed, err := f.ui.ShowConfirmDialog("ç¡®è®¤è°ƒç”¨", "ç¡®è®¤è°ƒç”¨æ­¤åˆçº¦æ–¹æ³•å—ï¼Ÿ")
	if err != nil || !confirmed {
		f.ui.ShowWarning("âŒ è°ƒç”¨å·²å–æ¶ˆ")
		return nil
	}

	// ====== æ‰§è¡Œè°ƒç”¨ ======
	fmt.Println()
	spinner := f.ui.ShowSpinner("è°ƒç”¨ä¸­ï¼Œè¯·ç¨å€™...")
	spinner.Start()

	result, err := f.contractService.CallContract(ctx, &ContractCallRequest{
		WalletName:  selectedWallet.Name,
		Password:    password,
		ContentHash: contractIDBytes,
		Method:      method,
		Params:      params,
		Payload:     payload, // âœ… æ”¯æŒJSON payload
	})

	spinner.Stop()

	// ====== æ˜¾ç¤ºç»“æœ ======
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ è°ƒç”¨å¤±è´¥: %v", err))
		return fmt.Errorf("è°ƒç”¨å¤±è´¥: %w", err)
	}

	f.ui.ShowSuccess("âœ… è°ƒç”¨æˆåŠŸï¼äº¤æ˜“å·²æäº¤åˆ°åŒºå—é“¾ç½‘ç»œ")
	fmt.Println()
	f.ui.ShowInfo("ğŸ“‹ è°ƒç”¨ç»“æœï¼š")
	f.ui.ShowInfo(fmt.Sprintf("  â€¢ äº¤æ˜“å“ˆå¸Œ: %s", result.TxHash))
	
	if len(result.Results) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ è¿”å›å€¼(u64): %v", result.Results))
	}
	
	if len(result.ReturnData) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ è¿”å›æ•°æ®: %s", formatReturnData(result.ReturnData)))
	}

	if len(result.Events) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ äº‹ä»¶æ•°é‡: %d", len(result.Events)))
		for i, evt := range result.Events {
			f.ui.ShowInfo(fmt.Sprintf("    [%d] ç±»å‹: %s", i+1, evt.Type))
		}
	}
	fmt.Println()

	return nil
}

// ============================================================================
// åˆçº¦æŸ¥è¯¢æµç¨‹ï¼ˆåªè¯»è°ƒç”¨ï¼‰
// ============================================================================

// ShowQueryContract å±•ç¤ºåˆçº¦æŸ¥è¯¢æµç¨‹ï¼ˆäº¤äº’å¼ï¼‰
//
// å®Œæ•´æµç¨‹ï¼š
//   æ­¥éª¤1: è¾“å…¥åˆçº¦ID
//   æ­¥éª¤2: è¾“å…¥æŸ¥è¯¢æ–¹æ³•å
//   æ­¥éª¤3: è¾“å…¥æ–¹æ³•å‚æ•°
//   æ­¥éª¤4: æ‰§è¡ŒæŸ¥è¯¢å¹¶æ˜¾ç¤ºç»“æœ
func (f *ContractFlow) ShowQueryContract(ctx context.Context) error {
	f.ui.ShowHeader("ğŸ” æŸ¥è¯¢æ™ºèƒ½åˆçº¦ï¼ˆåªè¯»ï¼‰")

	// ====== æ­¥éª¤1: è¾“å…¥åˆçº¦ID ======
	f.ui.ShowInfo("ğŸ”— æ­¥éª¤ 1/4ï¼šè¾“å…¥åˆçº¦ID")
	fmt.Println()

	contractIDStr, err := f.ui.ShowInputDialog("åˆçº¦ID", "è¯·è¾“å…¥åˆçº¦IDï¼ˆ64ä½åå…­è¿›åˆ¶çš„ContentHashï¼‰", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥åˆçº¦IDå¤±è´¥: %w", err)
	}

	// éªŒè¯åˆçº¦IDæ ¼å¼
	contractIDStr = strings.TrimSpace(contractIDStr)
	contractIDStr = strings.TrimPrefix(contractIDStr, "0x")
	
	_, err = hex.DecodeString(contractIDStr)
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ åˆçº¦IDæ ¼å¼é”™è¯¯: %v", err))
		return fmt.Errorf("åˆçº¦IDæ ¼å¼é”™è¯¯: %w", err)
	}

	f.ui.ShowSuccess(fmt.Sprintf("âœ… åˆçº¦ID: %s", contractIDStr))
	fmt.Println()

	// ====== æ­¥éª¤2: è¾“å…¥æŸ¥è¯¢æ–¹æ³•å ======
	f.ui.ShowInfo("ğŸ¯ æ­¥éª¤ 2/4ï¼šè¾“å…¥æŸ¥è¯¢æ–¹æ³•")
	fmt.Println()

	method, err := f.ui.ShowInputDialog("æ–¹æ³•å", "è¯·è¾“å…¥è¦æŸ¥è¯¢çš„æ–¹æ³•å", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥æ–¹æ³•åå¤±è´¥: %w", err)
	}

	method = strings.TrimSpace(method)
	if method == "" {
		f.ui.ShowError("âŒ æ–¹æ³•åä¸èƒ½ä¸ºç©º")
		return fmt.Errorf("æ–¹æ³•åä¸ºç©º")
	}

	f.ui.ShowSuccess(fmt.Sprintf("âœ… æŸ¥è¯¢æ–¹æ³•: %s", method))
	fmt.Println()

	// ====== æ­¥éª¤3: è¾“å…¥æ–¹æ³•å‚æ•° ======
	f.ui.ShowInfo("ğŸ“ æ­¥éª¤ 3/4ï¼šè¾“å…¥æ–¹æ³•å‚æ•°")
	fmt.Println()

	paramsStr, err := f.ui.ShowInputDialog("æ–¹æ³•å‚æ•°", "è¯·è¾“å…¥å‚æ•°ï¼ˆu64æ•°ç»„ï¼Œé€—å·åˆ†éš”ï¼Œæ— å‚æ•°ç›´æ¥å›è½¦ï¼‰", false)
	if err != nil {
		return fmt.Errorf("è¾“å…¥å‚æ•°å¤±è´¥: %w", err)
	}

	var params []uint64
	paramsStr = strings.TrimSpace(paramsStr)
	if paramsStr != "" {
		paramParts := strings.Split(paramsStr, ",")
		params = make([]uint64, 0, len(paramParts))
		for _, part := range paramParts {
			part = strings.TrimSpace(part)
			if part == "" {
				continue
			}
			var val uint64
			_, err := fmt.Sscanf(part, "%d", &val)
			if err != nil {
				f.ui.ShowError(fmt.Sprintf("âŒ å‚æ•°è§£æå¤±è´¥: %v", err))
				return fmt.Errorf("å‚æ•°è§£æå¤±è´¥: %w", err)
			}
			params = append(params, val)
		}
	}

	if len(params) > 0 {
		f.ui.ShowSuccess(fmt.Sprintf("âœ… å‚æ•°: %v", params))
	} else {
		f.ui.ShowInfo("  â€¢ æ— å‚æ•°")
	}
	fmt.Println()

	// ====== æ­¥éª¤4: æ‰§è¡ŒæŸ¥è¯¢ ======
	f.ui.ShowInfo("ğŸ“Š æ­¥éª¤ 4/4ï¼šæ‰§è¡ŒæŸ¥è¯¢")
	fmt.Println()

	spinner := f.ui.ShowSpinner("æŸ¥è¯¢ä¸­ï¼Œè¯·ç¨å€™...")
	spinner.Start()

	result, err := f.contractService.QueryContract(ctx, &ContractQueryRequest{
		ContentHash: contractIDStr,
		Method:      method,
		Params:      params,
	})

	spinner.Stop()

	// ====== æ˜¾ç¤ºç»“æœ ======
	if err != nil {
		f.ui.ShowError(fmt.Sprintf("âŒ æŸ¥è¯¢å¤±è´¥: %v", err))
		return fmt.Errorf("æŸ¥è¯¢å¤±è´¥: %w", err)
	}

	f.ui.ShowSuccess("âœ… æŸ¥è¯¢æˆåŠŸï¼ˆåªè¯»è°ƒç”¨ï¼Œä¸æ¶ˆè€—Gasï¼‰")
	fmt.Println()
	f.ui.ShowInfo("ğŸ“‹ æŸ¥è¯¢ç»“æœï¼š")
	
	if len(result.Results) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ è¿”å›å€¼(u64): %v", result.Results))
	}
	
	if len(result.ReturnData) > 0 {
		f.ui.ShowInfo(fmt.Sprintf("  â€¢ è¿”å›æ•°æ®: %s", formatReturnData(result.ReturnData)))
	}

	if result.Metadata != nil && len(result.Metadata) > 0 {
		f.ui.ShowInfo("  â€¢ å…ƒæ•°æ®:")
		for k, v := range result.Metadata {
			f.ui.ShowInfo(fmt.Sprintf("    %s: %v", k, v))
		}
	}
	fmt.Println()

	return nil
}

// ============================================================================
// è¾…åŠ©å‡½æ•°
// ============================================================================

// extractContractNameFromPath ä»æ–‡ä»¶è·¯å¾„æå–åˆçº¦åç§°
//
// æå–è§„åˆ™ï¼š
//   - æå–æ–‡ä»¶åï¼ˆä¸å«æ‰©å±•åï¼‰
//   - å»é™¤è·¯å¾„åˆ†éš”ç¬¦
//   - ç¤ºä¾‹ï¼š"/path/to/hello_world.wasm" â†’ "hello_world"
func extractContractNameFromPath(filePath string) string {
	// è·å–æ–‡ä»¶åï¼ˆå«æ‰©å±•åï¼‰
	fileName := filepath.Base(filePath)

	// å»é™¤æ‰©å±•å
	ext := filepath.Ext(fileName)
	if ext != "" {
		fileName = strings.TrimSuffix(fileName, ext)
	}

	// å¦‚æœæå–å¤±è´¥ï¼Œä½¿ç”¨é»˜è®¤å€¼
	if fileName == "" {
		return "UnnamedContract"
	}

	return fileName
}

// formatFileSize æ ¼å¼åŒ–æ–‡ä»¶å¤§å°
func formatFileSize(size int64) string {
	const (
		KB = 1024
		MB = 1024 * KB
		GB = 1024 * MB
	)

	switch {
	case size >= GB:
		return fmt.Sprintf("%.2f GB", float64(size)/float64(GB))
	case size >= MB:
		return fmt.Sprintf("%.2f MB", float64(size)/float64(MB))
	case size >= KB:
		return fmt.Sprintf("%.2f KB", float64(size)/float64(KB))
	default:
		return fmt.Sprintf("%d bytes", size)
	}
}

// formatReturnData æ ¼å¼åŒ–è¿”å›æ•°æ®
func formatReturnData(data []byte) string {
	if len(data) == 0 {
		return ""
	}

	if formatted, ok := tryFormatBalanceJSON(data); ok {
		return formatted
	}

	// å°è¯•è§£æä¸ºUTF-8å­—ç¬¦ä¸²
	if isPrintable(data) {
		return string(data)
	}

	// å¦åˆ™æ˜¾ç¤ºåå…­è¿›åˆ¶ï¼ˆæˆªæ–­æ˜¾ç¤ºå‰64å­—èŠ‚ï¼‰
	if len(data) > 64 {
		return fmt.Sprintf("0x%s... (%d bytes)", hex.EncodeToString(data[:64]), len(data))
	}
	return fmt.Sprintf("0x%s", hex.EncodeToString(data))
}

func tryFormatBalanceJSON(data []byte) (string, bool) {
	var payload map[string]interface{}
	if err := json.Unmarshal(data, &payload); err != nil {
		return "", false
	}

	balanceWei, ok := extractBalanceWei(payload)
	if !ok {
		return "", false
	}

	balanceWES := utils.FormatWeiToDecimal(balanceWei)

	address := ""
	if addr, ok := payload["address"].(string); ok && addr != "" {
		address = addr
	}

	tokenID := ""
	if token, ok := payload["token_id"].(string); ok && token != "" {
		tokenID = token
	}

	parts := make([]string, 0, 3)
	if address != "" {
		parts = append(parts, fmt.Sprintf("åœ°å€: %s", address))
	}
	if tokenID != "" {
		parts = append(parts, fmt.Sprintf("Token ID: %s", tokenID))
	}
	parts = append(parts, fmt.Sprintf("ä½™é¢: %s WES (%d wei)", balanceWES, balanceWei))

	return strings.Join(parts, " | "), true
}

func extractBalanceWei(payload map[string]interface{}) (uint64, bool) {
	if rawWei, exists := payload["balance_wei"]; exists {
		if wei, ok := parseBalanceUint64(rawWei); ok {
			return wei, true
		}
	}

	if rawBalance, exists := payload["balance"]; exists {
		switch v := rawBalance.(type) {
		case string:
			trimmed := strings.TrimSpace(v)
			if trimmed == "" {
				return 0, false
			}
			if strings.ContainsRune(trimmed, '.') {
				if wei, err := utils.ParseDecimalToWei(trimmed); err == nil {
					return wei, true
				}
			}
			return parseBalanceUint64(trimmed)
		default:
			return parseBalanceUint64(v)
		}
	}

	return 0, false
}

func parseBalanceUint64(value interface{}) (uint64, bool) {
	switch v := value.(type) {
	case float64:
		if v < 0 {
			return 0, false
		}
		return uint64(v), true
	case string:
		val, err := strconv.ParseUint(strings.TrimSpace(v), 10, 64)
		if err != nil {
			return 0, false
		}
		return val, true
	case json.Number:
		val, err := v.Int64()
		if err != nil || val < 0 {
			return 0, false
		}
		return uint64(val), true
	case int64:
		if v < 0 {
			return 0, false
		}
		return uint64(v), true
	case uint64:
		return v, true
	default:
		return 0, false
	}
}

// isPrintable æ£€æŸ¥å­—èŠ‚æ•°ç»„æ˜¯å¦ä¸ºå¯æ‰“å°å­—ç¬¦
func isPrintable(data []byte) bool {
	for _, b := range data {
		if b < 32 || b > 126 {
			return false
		}
	}
	return true
}

