// Package history å®ç°å†å²äº¤æ˜“æŸ¥è¯¢é€»è¾‘
//
// ğŸ“œ **å†å²äº¤æ˜“æŸ¥è¯¢ (Transaction History Query)**
//
// æœ¬æ–‡ä»¶å®ç°å†å²äº¤æ˜“æŸ¥è¯¢é€»è¾‘ï¼Œæ”¯æŒæŒ‰èµ„æº/UTXOæŸ¥è¯¢æ‰€æœ‰ç›¸å…³äº¤æ˜“ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æŸ¥è¯¢èµ„æºçš„å†å²äº¤æ˜“ï¼ˆéƒ¨ç½²ã€å¼•ç”¨ã€å‡çº§ï¼‰
// - æŸ¥è¯¢UTXOçš„å†å²äº¤æ˜“ï¼ˆå¼•ç”¨ã€æ¶ˆè´¹ï¼‰
// - æ”¯æŒåˆ†é¡µå’Œè¿‡æ»¤
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - ä»å†å²ç´¢å¼•ä¸­è¯»å–äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// - é€šè¿‡äº¤æ˜“ç´¢å¼•è·å–äº¤æ˜“è¯¦æƒ…
// - ä»åŒºå—ä¸­è§£æäº¤æ˜“å®Œæ•´ä¿¡æ¯
package history

import (
	"context"
	"encoding/binary"
	"fmt"

	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// Service å†å²äº¤æ˜“æŸ¥è¯¢æœåŠ¡
type Service struct {
	storage storage.BadgerStore
	logger  log.Logger
}

// NewService åˆ›å»ºå†å²äº¤æ˜“æŸ¥è¯¢æœåŠ¡
func NewService(storage storage.BadgerStore, logger log.Logger) (*Service, error) {
	if storage == nil {
		return nil, fmt.Errorf("storage ä¸èƒ½ä¸ºç©º")
	}

	return &Service{
		storage: storage,
		logger:  logger,
	}, nil
}

// GetResourceHistory è·å–èµ„æºçš„å†å²äº¤æ˜“åˆ—è¡¨
//
// ğŸ“‹ **æŸ¥è¯¢æµç¨‹**ï¼š
// 1. ä»èµ„æºå†å²ç´¢å¼•ä¸­è¯»å–äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// 2. è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// 3. åº”ç”¨åˆ†é¡µå’Œè¿‡æ»¤
// 4. è¿”å›äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
//
// âš ï¸ **ç´¢å¼•æ ¼å¼**ï¼š
// - é”®ï¼š`indices:resource:history:{contentHash}`
// - å€¼ï¼šäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆå˜é•¿ï¼Œæ¯32å­—èŠ‚ä¸€ä¸ªäº¤æ˜“å“ˆå¸Œï¼‰+ æœ€åæ›´æ–°é«˜åº¦ï¼ˆ8å­—èŠ‚ï¼‰
func (s *Service) GetResourceHistory(ctx context.Context, contentHash []byte, offset, limit int) ([]*TxHistoryEntry, error) {
	if len(contentHash) != 32 {
		return nil, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(contentHash))
	}

	// 1. æ„å»ºèµ„æºå†å²ç´¢å¼•é”®
	historyKey := fmt.Sprintf("indices:resource:history:%x", contentHash)

	// 2. è¯»å–å†å²ç´¢å¼•å€¼
	// æ³¨æ„ï¼šBadgerStore.Get åœ¨é”®ä¸å­˜åœ¨æ—¶è¿”å› nil å€¼å’Œ nil é”™è¯¯
	indexData, err := s.storage.Get(ctx, []byte(historyKey))
	if err != nil {
		return nil, fmt.Errorf("è¯»å–èµ„æºå†å²ç´¢å¼•å¤±è´¥: %w", err)
	}
	if indexData == nil || len(indexData) == 0 {
		// ç´¢å¼•ä¸å­˜åœ¨æ˜¯æ­£å¸¸æƒ…å†µï¼ˆå†å²æ•°æ®å¯èƒ½è¿˜æœªå»ºç«‹ç´¢å¼•ï¼‰ï¼Œè¿”å›ç©ºåˆ—è¡¨
		return []*TxHistoryEntry{}, nil
	}

	if len(indexData) < 8 {
		// æ•°æ®æ ¼å¼é”™è¯¯ï¼Œè¿”å›ç©ºåˆ—è¡¨
		return []*TxHistoryEntry{}, nil
	}

	// 3. è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆæ’é™¤æœ€å8å­—èŠ‚çš„é«˜åº¦ä¿¡æ¯ï¼‰
	txHashesData := indexData[:len(indexData)-8]
	if len(txHashesData)%32 != 0 {
		// æ•°æ®æ ¼å¼é”™è¯¯ï¼Œè¿”å›ç©ºåˆ—è¡¨
		return []*TxHistoryEntry{}, nil
	}

	// 4. è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨
	txHashes := make([][]byte, 0, len(txHashesData)/32)
	for i := 0; i < len(txHashesData); i += 32 {
		txHash := make([]byte, 32)
		copy(txHash, txHashesData[i:i+32])
		txHashes = append(txHashes, txHash)
	}

	// 5. åº”ç”¨åˆ†é¡µ
	start := offset
	end := offset + limit
	if start > len(txHashes) {
		return []*TxHistoryEntry{}, nil
	}
	if end > len(txHashes) {
		end = len(txHashes)
	}

	// 6. æ„å»ºäº¤æ˜“å†å²æ¡ç›®
	entries := make([]*TxHistoryEntry, 0, end-start)
	for i := start; i < end; i++ {
		entries = append(entries, &TxHistoryEntry{
			TxHash: txHashes[i],
		})
	}

	return entries, nil
}

// GetUTXOHistory è·å–UTXOçš„å†å²äº¤æ˜“åˆ—è¡¨
//
// ğŸ“‹ **æŸ¥è¯¢æµç¨‹**ï¼š
// 1. ä»UTXOå†å²ç´¢å¼•ä¸­è¯»å–äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// 2. è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨
// 3. åº”ç”¨åˆ†é¡µå’Œè¿‡æ»¤
// 4. è¿”å›äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
//
// âš ï¸ **ç´¢å¼•æ ¼å¼**ï¼š
// - é”®ï¼š`indices:utxo:history:{txId}:{outputIndex}`
// - å€¼ï¼šäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆå˜é•¿ï¼Œæ¯32å­—èŠ‚ä¸€ä¸ªäº¤æ˜“å“ˆå¸Œï¼‰+ æœ€åæ›´æ–°é«˜åº¦ï¼ˆ8å­—èŠ‚ï¼‰
func (s *Service) GetUTXOHistory(ctx context.Context, outpoint *transaction.OutPoint, offset, limit int) ([]*TxHistoryEntry, error) {
	if outpoint == nil || len(outpoint.TxId) != 32 {
		return nil, fmt.Errorf("æ— æ•ˆçš„ OutPoint")
	}

	// 1. æ„å»ºUTXOå†å²ç´¢å¼•é”®
	historyKey := fmt.Sprintf("indices:utxo:history:%x:%d", outpoint.TxId, outpoint.OutputIndex)

	// 2. è¯»å–å†å²ç´¢å¼•å€¼
	indexData, err := s.storage.Get(ctx, []byte(historyKey))
	if err != nil {
		return nil, fmt.Errorf("è¯»å–UTXOå†å²ç´¢å¼•å¤±è´¥: %w", err)
	}
	if indexData == nil || len(indexData) == 0 {
		// ç´¢å¼•ä¸å­˜åœ¨ï¼Œè¿”å›ç©ºåˆ—è¡¨
		return []*TxHistoryEntry{}, nil
	}

	if len(indexData) < 8 {
		// æ•°æ®æ ¼å¼é”™è¯¯ï¼Œè¿”å›ç©ºåˆ—è¡¨
		return []*TxHistoryEntry{}, nil
	}

	// 3. è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆæ’é™¤æœ€å8å­—èŠ‚çš„é«˜åº¦ä¿¡æ¯ï¼‰
	txHashesData := indexData[:len(indexData)-8]
	if len(txHashesData)%32 != 0 {
		// æ•°æ®æ ¼å¼é”™è¯¯ï¼Œè¿”å›ç©ºåˆ—è¡¨
		return []*TxHistoryEntry{}, nil
	}

	// 4. è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨
	txHashes := make([][]byte, 0, len(txHashesData)/32)
	for i := 0; i < len(txHashesData); i += 32 {
		txHash := make([]byte, 32)
		copy(txHash, txHashesData[i:i+32])
		txHashes = append(txHashes, txHash)
	}

	// 5. åº”ç”¨åˆ†é¡µ
	start := offset
	end := offset + limit
	if start > len(txHashes) {
		return []*TxHistoryEntry{}, nil
	}
	if end > len(txHashes) {
		end = len(txHashes)
	}

	// 6. æ„å»ºäº¤æ˜“å†å²æ¡ç›®
	entries := make([]*TxHistoryEntry, 0, end-start)
	for i := start; i < end; i++ {
		entries = append(entries, &TxHistoryEntry{
			TxHash: txHashes[i],
		})
	}

	return entries, nil
}

// GetResourceHistoryTotal è·å–èµ„æºçš„å†å²äº¤æ˜“æ€»æ•°
func (s *Service) GetResourceHistoryTotal(ctx context.Context, contentHash []byte) (int, error) {
	if len(contentHash) != 32 {
		return 0, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(contentHash))
	}

	// æ„å»ºèµ„æºå†å²ç´¢å¼•é”®
	historyKey := fmt.Sprintf("indices:resource:history:%x", contentHash)

	// è¯»å–å†å²ç´¢å¼•å€¼
	indexData, err := s.storage.Get(ctx, []byte(historyKey))
	if err != nil {
		return 0, fmt.Errorf("è¯»å–èµ„æºå†å²ç´¢å¼•å¤±è´¥: %w", err)
	}
	if indexData == nil || len(indexData) == 0 {
		return 0, nil
	}

	if len(indexData) < 8 {
		return 0, nil
	}

	// è§£æäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆæ’é™¤æœ€å8å­—èŠ‚çš„é«˜åº¦ä¿¡æ¯ï¼‰
	txHashesData := indexData[:len(indexData)-8]
	if len(txHashesData)%32 != 0 {
		return 0, nil
	}

	return len(txHashesData) / 32, nil
}

// TxHistoryEntry äº¤æ˜“å†å²æ¡ç›®
type TxHistoryEntry struct {
	TxHash []byte // äº¤æ˜“å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
}

// GetLastUpdateHeight ä»å†å²ç´¢å¼•ä¸­è·å–æœ€åæ›´æ–°çš„åŒºå—é«˜åº¦
func (s *Service) GetLastUpdateHeight(ctx context.Context, contentHash []byte) (uint64, error) {
	if len(contentHash) != 32 {
		return 0, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(contentHash))
	}

	// æ„å»ºèµ„æºå†å²ç´¢å¼•é”®
	historyKey := fmt.Sprintf("indices:resource:history:%x", contentHash)

	// è¯»å–å†å²ç´¢å¼•å€¼
	indexData, err := s.storage.Get(ctx, []byte(historyKey))
	if err != nil {
		return 0, fmt.Errorf("è¯»å–èµ„æºå†å²ç´¢å¼•å¤±è´¥: %w", err)
	}
	if indexData == nil || len(indexData) == 0 {
		return 0, nil
	}

	if len(indexData) < 8 {
		return 0, nil
	}

	// è¯»å–æœ€å8å­—èŠ‚çš„é«˜åº¦ä¿¡æ¯
	heightBytes := indexData[len(indexData)-8:]
	return binary.BigEndian.Uint64(heightBytes), nil
}

